--- a/demo/style.css
+++ b/demo/style.css
@@ -1,3 +1,44 @@
 body {
   font-size: 16px;
+  text-align: center;
+  background: #f4f7f6;
+  color: #464747;
+}
+
+.wrap {
+  margin: 0 auto;
+  width: auto;
+  max-width: 1340px;
+  min-width: 1080px;
+}
+
+.flex {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;;
+}
+
+.link-button {
+  text-decoration: none;
+  border-radius: 5px;
+  border: 1px solid #bcc3c3;
+  color: #bcc3c3;
+  padding: 10px 20px;
+  display: block;
+  width: 80px;
+  margin: 20px auto 0;
+  font-size: 13px;
+}
+
+.link-button:hover {
+  opacity: .7;
+}
+
+h2 {
+  margin-top: 40px;
+}
+
+.react-ja-date-picker__container {
+  background: #fff;
+      box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);
 }
