add footer and ribbon

--- a/demo/style.css
+++ b/demo/style.css
@@ -15,8 +15,16 @@ body {
 .flex {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;;
+  justify-content: space-between;
 }
+
+/*.container {
+  position: relative;
+}*/
+
+/*.content {
+  padding-bottom: 136px;
+}*/
 
 .link-button {
   text-decoration: none;
@@ -28,6 +36,7 @@ body {
   width: 80px;
   margin: 20px auto 0;
   font-size: 13px;
+  transition: .2s;
 }
 
 .link-button:hover {
@@ -40,5 +49,30 @@ h2 {
 
 .react-ja-date-picker__container {
   background: #fff;
-      box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);
+}
+
+footer {
+  margin: 60px 0 30px 0;
+  /*position: fixed;
+  bottom: 0;
+  width: 100%;*/
+}
+
+footer .wrap {
+  border-top: 1px solid rgb(228, 231, 231);
+  padding-top: 20px;
+}
+
+.small {
+  font-size: 12px;
+}
+
+.logo {
+  position: relative;
+  top: 6px;
+}
+
+a img:hover {
+  opacity: .7;
 }
