--- a/demo/style.css
+++ b/demo/style.css
@@ -43,3 +43,14 @@ h2 {
   background: #fff;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);
 }
+
+pre {
+  background: #121313;
+  text-align: left;
+  color: #fff;
+}
+
+pre.line-numbers {
+  padding-left: 3.8em;
+  counter-reset: linenumber;
+}
