--- a/demo/style.css
+++ b/demo/style.css
@@ -48,9 +48,7 @@ pre {
   background: #121313;
   text-align: left;
   color: #fff;
-}
-
-pre.line-numbers {
-  padding-left: 3.8em;
-  counter-reset: linenumber;
+  width: 780px;
+  margin: 0 auto;
+  line-height: 1.5em;
 }
